kubernetes/infrastructure/configs/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    lbipam.cilium.io/ips: "10.69.65.40"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - grafana.lilstrudel.io
      secretName: grafana-tls
  rules:
    - host: grafana.lilstrudel.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
